--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start" : "node app.js"
+    "start": "node app.js"
   },
   "author": "srinath",
   "license": "ISC",
@@ -25,11 +25,13 @@
     "moment": "^2.25.0",
     "mongoose": "^5.9.10",
     "multer": "^1.4.2",
+    "node-geocoder": "^3.27.0",
     "nodemailer": "^6.4.6",
     "nodemon": "^2.0.3",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^6.0.1"
+    "passport-local-mongoose": "^6.0.1",
+    "passport-remember-me": "0.0.1"
   }
 }
